--- a/ctdb/files/ctdbd.conf
+++ b/ctdb/files/ctdbd.conf
@@ -1,3 +1,3 @@
-{%- for key, value in salt['pillar.get']('ctdb:config.items()') %}
+{%- for key, value in salt['pillar.get']('ctdb:config').items() %}
 {{ key }}={{ value }}
 {%- endfor %}
